# Signals

./: .coverage  .flake8  .gitignore  README.md  alert_engine.py  app.py  config.py  env.bat  main_ta.py  message_announcer.py  price_change_signal.py  profile.py  pyproject.toml  pytest.ini  rabbitmq.py  requirements.txt  schemas.py  scraper.py  scrinner.py  server.py  stock.py  test_consumer.py  test_tinkoff_api.py  testing_instruments.py  tinkoff_bonds.py
data/: work_stocks.txt
flutter_client/: pubspec.yaml
flutter_client/android/app/src/main/: AndroidManifest.xml
flutter_client/lib/: main.dart
flutter_client/test/: widget_test.dart
old_version/: config.py  env.bat  main_ta.py
old_version/ta/: myhelper.py  scanner.py  scraper.py  stock.py  variables.py
old_version/www/: __init__.py  forms.py  routes.py
old_version/www/templates/: base.html  index.html  indicators.html  overview.html  stock.html
ta/: __init__.py  indicators.py  myhelper.py  scanner.py  schemas.py  scraper.py  scrinner.py  stock.py  variables.py
templates/: home.html
tests/: test_scraper.py
www/: __init__.py  routes.py
www/static/js/: main.js
www/templates/: 404.html  500.html  base.html  index.html  indicators.html  overview.html  scripts.html  stock.html
