[project]
name = "signals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.35.2",
    "pympler>=1.1",
    "t-tech-investments>=0.3.4",
    "tzdata>=2025.2",
    "xlsxwriter>=3.2.9",
]

[[tool.uv.index]]
url = "https://opensource.tbank.ru/api/v4/projects/238/packages/pypi/simple"
default = true
